# openlink-personal-assistant

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  gen_version.sh  index.html  sticker.xml  version.js
css/: assistants.css  chat.css
js/: audio.js  auth.js  chat.js  files.js  main.js  profile.js  storage.js  ui.js  websocket.js
